# drmaatcl

./: .gitignore  CMakeLists.txt  DOTdrmaashrc  License  README.md  TODO  boilerplate.w  drmaatcl-code.w  drmaatcl-data.w  drmaatcl-guide.w  drmaatcl-main.w  pkgIndex.tcl.in
Examples/: ex-c-example.tcl  ex-synctimeout.tcl  example.c  example.tcl  example00-drmaashrc.tcl  example01-simple.tcl  example02-proc.tcl  example03-catch.tcl
Figures/: Makefile  README.md  overview-1.eps  overview-1.fig
Tests/: drmaa-testsuite.tcl  notes-1.txt  run-testsuite.tcl  selective-test.tcl  test_exit_helper  test_kill_helper  tests-1.tcl  tests-2.tcl
